# bitcoinbastion

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_es.md  README_fr.md  README_ja.md  README_ru.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  errors.py  middleware.py
app/bot/: runner.py
app/core/: cache.py  config.py  enums.py  exceptions.py  logging.py  monitoring.py  security.py  telemetry.py
app/schemas/: admin.py  auth.py  base.py  citadel.py  common.py  education.py  entities.py  error.py  fees.py  health.py  news.py  observability.py  onchain.py  policy.py  privacy.py  recommendation.py  script.py  signal.py  treasury.py  user.py  utxo.py  wallet.py
app/tasks/: celery_app.py  delivery_tasks.py  digest_tasks.py  maintenance_tasks.py  news_tasks.py  observability_tasks.py  (+7 more)
docker/: Dockerfile
docs/: ALERT_THRESHOLDS.md  API_CONTRACTS.md  ARCHITECTURE.md  BACKEND_BACKLOG.md  BACKLOG_MASTER.md  CITADEL_EXTENSION_SYSTEM_PROMPT.md  CITADEL_PROTOCOL_EXTENSION_PROMPT.md  CODEX_CITADEL_PROMPT.md  CODEX_TASK_TEMPLATE.md  CODEX_TASK_TEMPLATE_CITADEL.md  CODEX_WORKFLOW.md  DOMAIN_MODELS.md  FRONTEND_BACKLOG.md  FRONTEND_VISION.md  OPERATIONS_RUNBOOK.md  PRODUCTION_READINESS.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  SPEC.md  SPEC_CITADEL.md  STATUS.md  SYSTEM_PROMPT.md
scripts/: check_alembic_reproducibility.sh  check_docs_truthfulness.py  check_model_migration_coverage.py
tests/: test_dedup.py  test_health_api.py  test_scoring.py  test_telegram_format.py
(+162 files in other folders)
