[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-bastion"
version = "0.1.0"
description = "Bitcoin-native intelligence and operations platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.8",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "feedparser>=6.0.11",
  "aiogram>=3.13.1",
  "celery>=5.4.0",
  "passlib[argon2]>=1.7.4",
  "python-jose>=3.3.0",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "factory-boy>=3.3.0",
  "black>=24.8.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
